    * New configuration variable snmp_timing, allowing to 
      configure timeout and retries for SNMP requests (also via WATO)

    WATO:
    * ps and ps.perf configurable via WATO now (without inventory)
    * New layout of main menu and a couple of other similar menus
    * New layout of ruleset overviews
    * Hide check_mk variable names per default now (change via global settings)
    * FIX: honor folder-permissions when creating, deleting 
           and modifiying rules
    * FIX: detect non-local site even if unix: is being used
    * FIX: better error message if not logged into site during 
           action that needs remote access
    * FIX: send automation data via POST not GET. This fixes inventory
           on hosts with more than 500 services.
    * FIX: make config options directly active after resetting them
           to their defaults (didn't work for start_url, etc.

    Multisite:
    * FIX: fixed filter of recent event views (4 hours didn't catch)
    * FIX: convert more buttons to new graphical style
    * FIX: Logwatch handles logs with only OK lines in it correctly in logfile list views
    * FIX: Fixed syntax error in "Single-Host Problems" view definition

    Mobile GUI:
    * FIX: commands can be executed again
    * FIX: fixed styling of buttons

    Checks & Agents:
    * FIX: Logwatch: fixed missing linebreak during reclassifing lines of logfiles

    BI:
    * FIX: make rotating folding arrows black (white was not visible)

1.2.0b3:
    Core:
    * FIX: fixed SNMP info declaration in checks: could be garbled
      up in rare cases
    * avoid duplicate parents definition, when using 'parents' and
      extra_host_conf["parents"] at the same time. The later one has
      precedence.

    Multisite:
    * Logwatch: Colorizing OK state blocks correctly
    * FIX: allow web plugins to be byte compiled (*.pyc). Those
      are preferred over *.py if existing
    * View Editor: Fixed jump to top of the page after moving painters during