@@ -766,6 +766,43 @@ div.varname {
     font-family: monospace, sans-serif;
 }
 
+/* page "global settings*/
+.wato .globalvars {
+    background-color: #eeeeee;
+    padding: 3px 5px;
+    width: 100%;
+}
+
+.wato .globalvars a {
+    color: black;
+    text-decoration: none;
+}
+.wato .globalvars a:hover {
+    text-decoration: underline;
+}
+
+.wato .globalvars div.text {
+    width: 335px;
+    padding-right: 3px;
+    overflow: hidden;
+}
+.wato .globalvars td.left {
+    width: 345px;
+    overflow: hidden;
+    white-space: nowrap;
+}
+.wato .globalvars td.right {
+    text-align: left;
+}
+.wato .globalvars div.text .dots {
+    color: #888;
+    overflow: hidden;
+}
+.wato .globalvars td.right img.iconbutton {
+    width: auto;
+    height: auto;
+}
+
 
 
 
