@@ -8,6 +8,7 @@
     * New layout of main menu and a couple of other similar menus
     * New layout of ruleset overviews
     * Hide check_mk variable names per default now (change via global settings)
+    * New layout of global settings
     * FIX: honor folder-permissions when creating, deleting 
            and modifiying rules
     * FIX: detect non-local site even if unix: is being used
